<resources>
    <!--Application-->
    <string name="app_name">ITLinker</string>
    <string name="error_internet">Sorry, no internet connectivity</string>
    <string name="error_empty">Field is empty</string>

    <!--Splash Activity-->
    <string name="welcome_message">Welcome to \n BSIT Linker App</string>

    <!--Signup Activity-->
    <string name="title">Title</string>
    <string name="signup">Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_user_type">Please select user type</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="empty_confirm_password">Confirm Password cannot be empty</string>
    <string name="password_miss_match">Password and confirm password donot match</string>

    <!--Login Activity-->
    <string name="login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Students Fragment-->
    <string name="students">Students</string>
    <string name="students_fragment">Students Fragment</string>

    <!--Alumni Fragment-->
    <string name="alumni">Alumni</string>
    <string name="alumni_fragment">Alumni Fragment</string>


    <!--Campus Fragment-->
    <string name="campus">Campus</string>
    <string name="campus_fragment">Campus Fragment</string>


    <!--Faculty Fragment-->
    <string name="faculty">Faculty</string>
    <string name="faculty_fragment">Faculty Fragment</string>


    <!--Staff Fragment-->
    <string name="staff">Staff</string>
    <string name="staff_fragment">Staff Fragment</string>


    <!--Profile Fragment-->
    <string name="my_profile">My Profile</string>
    <string name="profile_fragment">Profile Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
