<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alumni"
            android:title="@string/alumni"
            android:icon="@drawable/selector_alumni"/>
        <item
            android:id="@+id/students"
            android:title="@string/students"
            android:icon="@drawable/selector_students"/>
        <item
            android:id="@+id/campus"
            android:title="@string/campus"
            android:icon="@drawable/selector_campus"/>
        <item
            android:id="@+id/faculty"
            android:title="@string/faculty"
            android:icon="@drawable/selector_staff"/>
        <item
            android:id="@+id/staff"
            android:title="@string/staff"
            android:icon="@drawable/selector_staff"/>
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/selector_profile"/>
    </group>

</menu>
